# quiz-be

./: .gitignore  pyproject.toml
app/: db.py  deps.py  main.py
app/models/: __init__.py  crud_base.py  utils.py
app/models/account/: __init__.py  crud.py  model.py
app/models/connection/: __init__.py  crud.py  model.py
app/models/email/: __init__.py  crud.py  model.py
app/models/post/: __init__.py  model.py
app/routers/: __init__.py
app/routers/account/: router.py  schemas.py  utils.py
app/routers/connection/: router.py  schemas.py
app/routers/email/: router.py  schemas.py
app/utils/: __init__.py  auth_token.py  tokens.py
migrations/: env.py
migrations/versions/: 08047e9333eb_create_account_connections_table.py  43b81b4d2a44_create_emails_table.py  69b154cc9625_create_posts_table.py  febce9d1be64_create_accounts_table.py
tests/: conftest.py  db.py
tests/routers/account/: test_router.py
tests/routers/email/: test_router.py
